--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "target-display",
   "version": "0.1.0",
-  "homepage": "https://target-so.github.io/Target-display",
+  "homepage": "https://target-so.github.io/Target-display/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,7 +11,6 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "react-scripts": "5.0.1",
-    "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
