--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Target display",
+  "name": "Target Display",
   "icons": [
     {
       "src": "favicon.ico",
