--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "target-display",
   "version": "0.1.0",
-  "homepage": "https://target-so.github.io/Target-display/",
+  "homepage": "https://abmoallim.github.io/Target-display/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
